[package]
name = "devhub-cache-api"
version = "0.1.0"
edition = "2021"

[dependencies]
near-workspaces = { version = "0.14.0", optional = true }
near-account-id = "1.0.0"
near-sdk = "5.3.0"
rocket = { version = "0.5.0", features = ['json'] }
tokio = { version = "1.4", features = ["full"] }
rocket_db_pools = { version = "0.2.0", features = ['sqlx_postgres', 'sqlx'] }
dotenvy = "0.15.7"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
devhub-shared = "0.1.0"
sqlx = { version = "0.7", features = [
  "bigdecimal",
  "macros",
  "postgres",
  "chrono",
] }
chrono = { version = "0.4.26", features = ["serde"] }
utoipa = { version = "4.2", features = ["rocket_extras", "chrono"] }
anyhow = "1.0.76"
rocket_cors = "0.6.0"
utoipa-swagger-ui = { version = "7.1", features = ["rocket"] }
reqwest = "0.12.8"
near-api = "0.2.1"

[features]
default = ["workspaces"]
workspaces = ["near-workspaces"]

[profile.dev]
rustc = "nightly"

[profile.release]
rustc = "nightly"
